# tower-cli

./: .coderabbit.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL-AND-REFERENCE.md  LICENSE  README.md  bump-version.sh  dist-workspace.toml  flake.nix  pyproject.toml  pytest.ini.template  rustfmt.toml
.claude-plugin/: marketplace.json
.github/: check-for-naughty-dependencies.sh
.github/workflows/: build-binaries.yml  build-docker.yml  build-wasm.yml  debug-wheels.yml  integration-tests.yml  pr-base-check.yaml  publish-docker.yml  publish-npm.yml  publish-pypi.yml  regenerate-skill.yml  release.yml  test-python.yml  test-rust.yml  test-wasm.yml
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  session.rs  towerfile.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: errors.rs  lib.rs
crates/testutils/: Cargo.toml
crates/tower/: Cargo.toml
crates/tower-api/: Cargo.toml  README.md
crates/tower-api/src/: error.rs  lib.rs  progress_stream.rs  types.rs
crates/tower-api/src/apis/: configuration.rs  default_api.rs  feature_flags_api.rs  mod.rs
crates/tower-api/src/models/: accept_invitation_params.rs  accept_invitation_response.rs  account.rs  acknowledge_alert_response.rs  acknowledge_all_alerts_response.rs  alert.rs  alert_detail.rs  api_key.rs  api_key_owner.rs  app.rs  app_statistics.rs  app_summary.rs  app_version.rs  authentication_context.rs  batch_schedule_params.rs  batch_schedule_response.rs  cancel_run_response.rs  catalog.rs  catalog_credentials.rs  catalog_property.rs  claim_device_login_params.rs  claim_device_login_response.rs  claim_device_login_ticket_params.rs  claim_device_login_ticket_response.rs  create_account_params.rs  create_account_params_flags_struct.rs  create_account_response.rs  create_api_key_params.rs  create_api_key_response.rs  create_app_params.rs  create_app_response.rs  create_authenticator_params.rs  create_authenticator_response.rs  create_catalog_params.rs  create_catalog_response.rs  create_device_login_claim_params.rs  create_device_login_claim_response.rs  create_device_login_response.rs  create_device_login_ticket_response.rs  create_environment_params.rs  (+229 more)
crates/tower-cli/: Cargo.toml
crates/tower-cmd/: Cargo.toml
crates/tower-cmd/src/: api.rs  apps.rs  banner.txt  catalogs.rs  deploy.rs  doctor.rs  environments.rs  error.rs  lib.rs  mcp.rs  output.rs  package.rs  run.rs  schedules.rs  secrets.rs  session.rs  skill.rs  teams.rs  towerfile_gen.rs  util.rs  version.rs
crates/tower-cmd/src/templates/: dbt.yml.tmpl  duckdb.sql.tmpl  pyiceberg.py.tmpl  spark.py.tmpl
crates/tower-cmd/src/util/: apps.rs  cmd.rs  dates.rs  deploy.rs  git.rs  mod.rs  progress.rs  prompt.rs  spinner.rs  text.rs
crates/tower-cmd/tests/: cli_timeout_tests.rs  cucumber_tests.rs  mcp.rs
crates/tower-cmd/tests/features/: mcp_app_management.feature  mcp_deployment.feature  mcp_secrets_management.feature  mcp_team_management.feature  mcp_towerfile_management.feature  tower_run_timeout.feature
crates/tower-package/: Cargo.toml  README.md  types.d.ts
crates/tower-package-core/: Cargo.toml
crates/tower-package-wasm/: Cargo.toml  README.md  types.d.ts
crates/tower-package-wasm/scripts/: build.sh
crates/tower-package-wasm/src/: lib.rs
crates/tower-package-wasm/test/: build.test.ts  tsconfig.json
crates/tower-package/scripts/: build.sh
crates/tower-package/src/: core.rs  error.rs  lib.rs  native.rs  towerfile.rs  wasm.rs
crates/tower-package/test/: build.test.ts  package.json
crates/tower-package/tests/: package_test.rs
crates/tower-runtime/: Cargo.toml
crates/tower-runtime/src/: app.rs  auto_cleanup.rs  errors.rs  execution.rs  k8s.rs  launcher.rs  lib.rs  local.rs  local_backpu.rs  subprocess.rs
crates/tower-runtime/src/backends/: cli.rs  k8s.rs  local.rs  mod.rs  subprocess.rs
crates/tower-runtime/src/local/: mod.rs
crates/tower-runtime/tests/: local_test.rs  subprocess_test.rs
crates/tower-runtime/tests/example-apps/01-hello-world/: Towerfile  task.py
crates/tower-runtime/tests/example-apps/02-use-faker/: Towerfile  main.py  pyproject.toml
crates/tower-runtime/tests/example-apps/03-legacy-app/: Towerfile  requirements.txt  task.py
crates/tower-runtime/tests/example-apps/04-app-with-secret/: Towerfile  main.py  pyproject.toml
crates/tower-runtime/tests/example-apps/05-broken-dependencies/: Towerfile  main.py  pyproject.toml
crates/tower-runtime/tests/example-apps/06-multiple-import-paths/: Towerfile  task.py
crates/tower-runtime/tests/example-apps/06-multiple-import-paths/lib_a/: mod_a.py
crates/tower-runtime/tests/example-apps/06-multiple-import-paths/lib_b/: mod_b.py
crates/tower-telemetry/: Cargo.toml
crates/tower-telemetry/src/: context.rs  lib.rs  logging.rs
crates/tower-uv/: Cargo.toml
crates/tower-uv/src/: install.rs  lib.rs  resource_limits.rs
crates/tower-uv/tests/: install_test.rs  sync_test.rs
crates/tower-version/: Cargo.toml
crates/tower-version/src/: lib.rs
crates/tower/src/: lib.rs  main.rs
crates/tower/wix/: main.wxs
mock-api-server/: main.py
mock-api-server/tower_mock_api.egg-info/: PKG-INFO
openapi/: generate_tower_client.sh  generator_config.yaml
plugin/.claude-plugin/: plugin.json
python/tower/: __main__.py  pyproject.toml
python/tower-api-client/: README.md  pyproject.toml
python/tower-cli/: __main__.py
scripts/: build-nix-target.sh  bump-version.sh  generate-python-api-client.sh  generate-rust-api-client.sh  rust-api-client-generator-config.yaml  semver.py
scripts/rust-client-templates/: Cargo.mustache  model.mustache  partial_header.mustache
skills/tower/: SKILL.md
specs/: openapi.yaml
src/tower/: __init__.py  __main__.py  _client.py  _context.py  _dbt.py  _errors.py  _features.py  _llms.py  _native.pyi  _snowflake.py  _storage.py  _tables.py  _utils.py  cli.py  client.py  exceptions.py  polars.py  pyarrow.py  pyiceberg.py
tests/: test_client.py
tests/integration/: mcp_client.py  run_tests.py
tests/mock-api-server/: README.md  (+3 more)
(+529 files in other folders)
