[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77"
authors = ["Brad Heller <brad@tower.dev>"]
license = "MIT"
repository = "https://github.com/tower/tower-cli"

[workspace.dependencies]
async-compression  = { version = "0.4", features = ["tokio", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cli-table = "0.4"
config = { path = "crates/config" }
dirs = "5"
glob = "0.3"
log = "0.4"
promptly = "0.3"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde_json = "1.0"
serde = "1"
simple_logger = "5"
snafu = "0.7"
tmpdir = "1.0"
tower_api = { path = "crates/tower-api" }
tower_cmd = { path = "crates/tower-cmd" }
tower_package = { path = "crates/tower-package" }
tower_runtime = { path = "crates/tower-runtime" }
tokio = { version = "1", features = ["full"] }
tokio-pipe = "0.2"
tokio-stream = { version = "0.1.11", features = ["net"] }
tokio-tar = "0.3"
url = { version = "2", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
