[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.21"
description = "Tower is the best way to host Python data apps in production"
rust-version = "1.77"
authors = ["Brad Heller <brad@tower.dev>"]
license = "MIT"
repository = "https://github.com/tower/tower-cli"

[workspace.dependencies]
async-compression  = { version = "0.4", features = ["tokio", "gzip"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cli-table = "0.4"
colored = "2"
config = { path = "crates/config" }
crypto = { path = "crates/crypto" }
dirs = "5"
env_logger = "*"
futures-util = "0.3"
glob = "0.3"
indicatif = "0.17"
log = "0.4"
open = "5"
pem = "3"
promptly = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored", "stream"] }
rpassword = "7"
rsa = "0.9"
serde_json = "1.0"
serde = "1"
sha2 = "0.10"
simple_logger = "5"
snafu = "0.7"
spinners = "4"
testutils = { path = "crates/testutils" }
tmpdir = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-pipe = "0.2"
tokio-stream = { version = "0.1.11", features = ["net"] }
tokio-tar = "0.3"
tokio-util = "0.7"
tower-api = { path = "crates/tower-api" }
tower-cmd = { path = "crates/tower-cmd" }
tower-package = { path = "crates/tower-package" }
tower-runtime = { path = "crates/tower-runtime" }
url = { version = "2", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
