[package]
name = "config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true }
dirs = { workspace = true } 
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
toml = { workspace = true }
testutils = { workspace = true }
url = { workspace = true }
