[package]
name = "config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true } 
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
testutils = { workspace = true }
url = { workspace = true }
tower-api = { workspace = true }
tower-telemetry = { workspace = true }
