[package]
name = "tower-api"
version = { workspace = true }
edition = "2021"

[dependencies]
chrono = { workspace = true } 
config = { workspace = true } 
crypto = { workspace = true } 
log = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true }
rsa = {	workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
