[package]
name = "tower-cmd"
version = { workspace = true }
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cli-table = { workspace = true }
colored = { workspace = true }
config = { workspace = true }
crypto = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
open = { workspace = true }
promptly = { workspace = true }
rpassword = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simple_logger = { workspace = true }
spinners = { workspace = true }
tokio = { workspace = true }
tower-api = { workspace = true }
tower-package = { workspace = true }
tower-runtime = { workspace = true }
tower-version = { path = "../tower-version" }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
