[package]
name = "tower-cmd"
version = { workspace = true }
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cli-table = { workspace = true }
colored = { workspace = true }
config = { workspace = true }
crypto = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
promptly = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
spinners = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-api = { workspace = true }
tower-package = { workspace = true }
tower-runtime = { workspace = true }
tower-telemetry = { workspace = true }
tower-version = { path = "../tower-version" }
webbrowser = { workspace = true }
