[package]
name = "tower-cmd"
version = { workspace = true }
edition = "2021"

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cli-table = { workspace = true }
colored = { workspace = true }
config = { workspace = true }
crypto = { workspace = true }
ctrlc = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
promptly = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rpassword = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
spinners = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-api = { workspace = true }
tower-package = { workspace = true }
tower-runtime = { workspace = true }
tower-telemetry = { workspace = true }
tower-version = { path = "../tower-version" }
webbrowser = { workspace = true }
rmcp = { version = "0.5.0", features = ["server", "transport-io", "schemars", "transport-sse-server", "transport-streamable-http-server"] }
schemars = "1.0"
toml = { workspace = true }
toml_edit = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
testutils = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
futures = { workspace = true }
cucumber = { version = "0.21", features = ["macros"] }
tokio-test = "0.4"
