[package]
name = "tower-package"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-compression = { workspace = true }
config = { workspace = true }
glob = { workspace = true }
log = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true } 
snafu = { workspace = true } 
tmpdir = { workspace = true }
tokio = { workspace = true } 
tokio-tar = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
