[package]
name = "tower-package"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:async-compression",
    "dep:glob",
    "dep:tmpdir",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-tar",
    "dep:tower-telemetry",
]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:serde_bytes"]

[dependencies]
# Pure core — always compiled.
flate2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }

# Native shell — gated behind the `native` feature.
async-compression = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
tmpdir = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-tar = { workspace = true, optional = true }
tower-telemetry = { workspace = true, optional = true }

# WASM bindings — gated behind the `wasm` feature.
serde_bytes = { version = "0.11", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
testutils = { workspace = true }
