[package]
name = "tower-runtime"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
log = { workspace = true } 
snafu = { workspace = true } 
tower-package = { workspace = true } 
