[package]
name = "tower-runtime"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
nix = { workspace = true }
snafu = { workspace = true } 
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-package = { workspace = true } 
tower-telemetry = { workspace = true } 
tower-uv = { workspace = true } 

[dev-dependencies]
config = { workspace = true }
