[package]
name = "tower-runtime"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-package = { workspace = true }
tower-telemetry = { workspace = true }
tower-uv = { workspace = true }

# K8s dependencies (optional)
k8s-openapi = { version = "0.23", features = ["v1_31"], optional = true }
kube = { version = "0.96", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false, optional = true }

[features]
default = []
k8s = ["dep:k8s-openapi", "dep:kube"]

[dev-dependencies]
config = { workspace = true }
