[package]
name = "tower-uv"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }
tower-telemetry = { workspace = true }
uv = "=0.9.15"

[[bin]]
name = "uv-wrapper"
path = "src/bin/uv-wrapper.rs"
