[package]
name = "tower-uv"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-compression = { workspace = true }
async_zip = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
futures-lite = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
seahash = { workspace = true }
tokio = { workspace = true }
tokio-tar = { workspace = true }
tower-telemetry = { workspace = true }
