[package]
name = "tower-version"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
