[package]
name = "tower-version"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tower-telemetry = { workspace = true }
